--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,71 +1,82 @@
 <div class="container-fluid">
   <h1>BootCamp Enrollment Form</h1>
-  <form #userForm="ngForm" >
+  <form #userForm="ngForm">
 
     <div ngModelGroup="address">
       <div class="form-group">
-        <label >Street</label>
-        <input type="text" class="form-control" name="street" ngModel>
+        <label>Street</label>
+        <input type="text" class="form-control" name="street" [(ngModel)]="userModel.name">
       </div>
 
       <div class="form-group">
-        <label >City</label>
-        <input type="text" class="form-control" name="city" ngModel>
+        <label>City</label>
+        <input type="text" class="form-control" name="city" [(ngModel)]="userModel.city">
       </div>
 
       <div class="form-group">
-        <label >State</label>
-        <input type="text" class="form-control" name="state" ngModel>
+        <label>State</label>
+        <input type="text" class="form-control" name="state" [(ngModel)]="userModel.state">
       </div>
 
       <div class="form-group">
-        <label >Postal Code</label>
-        <input type="text" class="form-control" name="postalCode" ngModel>
+        <label>Postal Code</label>
+        <input type="text" class="form-control" name="postalCode" [(ngModel)]="userModel.state">
       </div>
     </div>
-    {{userForm.value | json}}
+
     <div class="form-group">
-      <label >Name</label>
-      <input type="text" class="form-control" name="userName" ngModel>
+      <label>Name</label>
+      <input type="text" #name="ngModel" [class.is-invalid]="name.invalid && name.touched" required class="form-control"
+        name="userName" [(ngModel)]="userModel.name">
     </div>
-<br>
+
+    {{name.dirty }}
+    <br>
     <div class="form-group">
-      <label >Email</label>
-      <input type="email" class="form-control" name="Email" ngModel>
+      <label>Email</label>
+      <input type="email" class="form-control" name="Email" [(ngModel)]="userModel.email">
     </div>
-<br>
+    <br>
     <div class="form-group">
-      <label >Phone</label>
-      <input type="tel" class="form-control" name="number" ngModel>
+      <label>Phone</label>
+      <input type="tel" required class="form-control" name="number" [(ngModel)]="userModel.phone" #phone="ngModel"
+        [class.is-invalid]="phone.invalid && phone.touched" pattern="^\d{10}$">
+        <!-- <small [class.d-none]="phone.valid || phone.untouched" class="text-danger" >phone number must be 10 digits</small> -->
+        <div *ngIf="phone.errors && (phone.invalid && phone.touched)">
+            <small class="text-danger" *ngIf="phone.errors?.['required']">Phone number is required</small>
+            <small class="text-danger" *ngIf="phone.errors?.['pattern']">Phone number must be 10 digits</small>
+        </div>
     </div>
-<br> 
+    <br>
     <div class="form-group">
-      <select  class="custom-text" ngModel name="interested in">
+      <select class="custom-text" [(ngModel)]="userModel.topic" name="interested in">
         <option selected>I am interested in</option>
         <option *ngFor="let topic of topics">{{topic}}</option>
       </select>
     </div>
-<br>
+    <br>
     <div class="mb-3">
-      <label >Time preference</label>
+      <label>Time preference</label>
       <div class="form-check">
-        <input type="radio" name="timePreference" class="form-check-input" value="morning" ngModel>
-        <label  class="form-check-label">Morning (9AM - 12PM)</label>
+        <input type="radio" name="timePreference" class="form-check-input" value="morning"
+          [(ngModel)]="userModel.timePreference">
+        <label class="form-check-label">Morning (9AM - 12PM)</label>
       </div>
 
       <div class="form-check">
-        <input type="radio" name="timePreference" class="form-check-input" value="evening" ngModel>
-        <label  class="form-check-label">Morning (5PM - 8PM)</label>
+        <input type="radio" name="timePreference" class="form-check-input" value="evening"
+          [(ngModel)]="userModel.timePreference">
+        <label class="form-check-label">Morning (5PM - 8PM)</label>
       </div>
     </div>
 
     <div class="form-check mb-3">
-      <input type="checkbox" class="form-check-input" ngModel name="offers">
-      <label  class="form-check-label">
+      <input type="checkbox" class="form-check-input" [(ngModel)]="userModel.subscribe" name="offers">
+      <label class="form-check-label">
         Send me promotional offers
       </label>
     </div>
-<br>
+    <br>
     <button class="btn btn-primary" type="submit">Submit</button>
   </form>
 </div>
