--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="container-fluid">
   <h1>BootCamp Enrollment Form</h1>
-  <form #userForm="ngForm" *ngIf="!submitted" novalidate (ngSubmit)="onSubmit()">
+  <div class="alert alert-danger" *ngIf="errorMsg">
+  {{errorMsg}}</div>
+  <form #userForm="ngForm" *ngIf="!submitted" novalidate (ngSubmit)="onSubmit(userForm)">
 
     <div ngModelGroup="address">
       <div class="form-group">
